<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RL_relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teespire.survay.activity.SettingPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TV_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/setting_password_title"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ET_setting_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:hint="@string/setting_password_password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"

            />

        <EditText
            android:id="@+id/ET_setting_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/white"
            android:hint="@string/setting_password_repassword"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            />

        <Button
            android:id="@+id/BTN_setting_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/custombtn"
            android:text="@string/setting_password_btnok"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="28sp" />
    </LinearLayout>


</RelativeLayout>
