<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:id="@+id/RL_aditionalOption"
    tools:context="com.teespire.survay.activity.AditionalOptionActivity">
    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".activity.MainActivity"
        tools:ignore="MergeRootFrame" />
    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:paddingBottom="20dp"
            android:background="@mipmap/text_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"

                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/CKB_setpassword"
                    android:gravity="center"
                    android:textSize="20sp"
                    android:paddingTop="15dp"
                    android:textStyle="bold"
                    android:text="@string/aditional_option_title"
                    android:textColor="@color/green" />
                <CheckBox
                    android:id="@+id/CKB_setpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:padding="4dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_above="@+id/CKB_gps_summery"
                    android:button="@drawable/checkbox"
                    android:layout_marginTop="10dp"
                    android:text="@string/aditional_password_setting" />
                <CheckBox
                    android:id="@+id/CKB_gps_summery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="9dp"
                    android:button="@drawable/checkbox"
                    android:padding="4dp"
                    android:text="@string/aditional_gps_summery"
                    android:textSize="20sp" />


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/CKB_gps_summery"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="Default Survey:"
                    android:textSize="20sp"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/TV_chngSurvey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/CKB_gps_summery"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="Default Survey:"
                    android:textSize="20sp"
                    android:textColor="@color/black" />



                <TextView
                    android:id="@+id/TV_faqs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/CKB_gps_summery"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="FAQs"
                    android:textSize="20sp"

                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/TV_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TV_faqs"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="About"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/TV_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/TV_about"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="9dp"
                    android:text="Logout"
                    android:textSize="20sp"
                    android:textColor="@color/black" />

            </LinearLayout>

            <Button
                android:id="@+id/BTN_done"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/custombtn"
                android:text="@string/aditional_btn_done"
                android:textStyle="bold"
                android:textSize="28sp"
                android:textColor="@color/white" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
